--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 		<artifactId>platform.config</artifactId>
 		<version>0.3-incubating</version>
 	</dependency>
+	<dependency>
+	  	<groupId>org.apache.stanbol</groupId>
+  		<artifactId>org.apache.stanbol.commons.ldpathtemplate</artifactId>
+  		<version>0.10.0-incubating-SNAPSHOT</version>
+  	</dependency>
     
     <!-- Jersey, servlet and freemarker -->
     <dependency>
