--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
   		<artifactId>org.apache.stanbol.commons.ldpathtemplate</artifactId>
   		<version>0.10.0-incubating-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+	  	<groupId>org.apache.stanbol</groupId>
+  		<artifactId>org.apache.stanbol.commons.ldviewable</artifactId>
+  		<version>0.10.0-incubating-SNAPSHOT</version>
+  	</dependency>
     
     <!-- Jersey, servlet and freemarker -->
     <dependency>
