--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>org.apache.stanbol</groupId>
   <artifactId>org.apache.stanbol.commons.usermanagement</artifactId>
-  <version>0.10.0-incubating-SNAPSHOT</version>
+  <version>0.10.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Apache Stanbol Commons usermanagement</name>
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>org.apache.stanbol</groupId>
       <artifactId>org.apache.stanbol.commons.web.base</artifactId>
-      <version>0.10.1-incubating-SNAPSHOT</version>
+      <version>0.10.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -93,12 +93,12 @@
 	<dependency>
 	  	<groupId>org.apache.stanbol</groupId>
   		<artifactId>org.apache.stanbol.commons.ldpathtemplate</artifactId>
-  		<version>0.10.0-incubating-SNAPSHOT</version>
+  		<version>0.10.0-SNAPSHOT</version>
   	</dependency>
   	<dependency>
 	  	<groupId>org.apache.stanbol</groupId>
   		<artifactId>org.apache.stanbol.commons.ldviewable</artifactId>
-  		<version>0.10.0-incubating-SNAPSHOT</version>
+  		<version>0.10.0-SNAPSHOT</version>
   	</dependency>
     
     <!-- Jersey, servlet and freemarker -->
