--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.stanbol</groupId>
     <artifactId>stanbol-parent</artifactId>
-    <version>2-incubating-SNAPSHOT</version>
+    <version>2-SNAPSHOT</version>
     <relativePath>../../parent</relativePath>
   </parent>
 
@@ -35,12 +35,12 @@
   <description>A Webconsole plugin for user management</description>
   <scm>
     <connection>
-      scm:svn:http://svn.apache.org/repos/asf/incubator/stanbol/trunk/commons/usermanagement
+      scm:svn:http://svn.apache.org/repos/asf/stanbol/trunk/commons/usermanagement
     </connection>
     <developerConnection>
-      scm:svn:https://svn.apache.org/repos/asf/incubator/stanbol/trunk/commons/usermanagement
+      scm:svn:https://svn.apache.org/repos/asf/stanbol/trunk/commons/usermanagement
     </developerConnection>
-    <url>http://incubator.apache.org/stanbol/</url>
+    <url>http://stanbol.apache.org/</url>
   </scm>
 
   <build>
