--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
       <artifactId>org.apache.felix.scr.annotations</artifactId>
     </dependency>
 
+    <dependency>
+    	<groupId>org.apache.stanbol</groupId>
+    	<artifactId>org.apache.stanbol.commons.security</artifactId>
+    	<version>0.10.0-SNAPSHOT</version>
+    	<type>bundle</type>
+    </dependency>
   </dependencies>
 
 </project>
